feature: add new component analysis method to enable passing existing manifests from existing directories fix: add correct error handling for cases in which exhort backend returns errors
Signed-off-by: Zvi Grinberg <tester@exhort-java-api.com>